# cortex-rag

./: .gitignore  README.md  cortex-project-spec.md  cortex-project-ui.jsx  gitignore  pyproject.toml
backend/: config.py  database.py  main.py  models.py  schemas.py  vector_store.py
backend/routers/: documents.py  query.py
backend/services/: generation.py  ingestion.py  retrieval.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: AnswerCard.jsx  ChatArea.jsx  DocumentItem.jsx  Icons.jsx  QueryInput.jsx  QuestionBubble.jsx  Sidebar.jsx  SourceCard.jsx  ThinkingIndicator.jsx  UploadZone.jsx
tests/: conftest.py  test_api.py  test_ingestion.py  test_retrieval.py
