[project]
name = "cortex-rag"
version = "0.1.0"
description = "Document Q&A system with Retrieval-Augmented Generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.40",
    "chromadb>=0.5",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "pypdf2>=3.0",
    "python-multipart>=0.0.9",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
